commit translated contents

--- a/articles/active-directory/manage-apps/index.yml
+++ b/articles/active-directory/manage-apps/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: kenwith
   ms.author: kenwith
   manager: celested
-  ms.openlocfilehash: 66d2691d1e8c10c21b419cc5c6672179f89171a9
-  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
+  ms.openlocfilehash: aa77188b8784c2106daf2f35d15e165b3964b56f
+  ms.sourcegitcommit: 78ecfbc831405e8d0f932c9aafcdf59589f81978
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/22/2020
-  ms.locfileid: "92372448"
+  ms.lasthandoff: 01/23/2021
+  ms.locfileid: "98730457"
 landingContent:
 - title: アプリ管理について
   linkLists:
@@ -104,7 +104,7 @@ landingContent:
   - linkListType: learn
     links:
     - text: 開発者向けのガイダンス
-      url: developer-guidance-for-integrating-applications.md
+      url: ../develop/v2-howto-app-gallery-listing.md
     - text: プラットフォームとは
       url: ../develop/v2-overview.md
 - title: ドキュメントの最新情報
