--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -970,10 +970,28 @@ groups:
     title: Python
   - id: rest-api
     title: REST
+- id: qnamaker-quickstart
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-javascript
+    title: JavaScript
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-go
+    title: Go
+  - id: programming-language-ruby
+    title: Ruby
+  - id: rest
+    title: REST
 metadata:
-  ms.openlocfilehash: 7486ee0d3c1be4f3957ecc11a97277b04d085691
-  ms.sourcegitcommit: aacbf77e4e40266e497b6073679642d97d110cda
+  ms.openlocfilehash: d0b0fc066111d3bd01ba5d810a5b1014981dfb1d
+  ms.sourcegitcommit: 75041f1bce98b1d20cd93945a7b3bd875e6999d0
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/12/2021
-  ms.locfileid: "98118491"
+  ms.lasthandoff: 01/22/2021
+  ms.locfileid: "98704445"
