--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -132,7 +132,7 @@
                   href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 管理操作の承認
               href: ../common/authorization-resource-provider.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: セキュリティ
+        - name: Security
           items:
             - name: セキュリティに関する推奨事項
               href: security-recommendations.md
@@ -228,46 +228,6 @@
                   href: ../common/storage-solution-small-dataset-low-moderate-network.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: 定期的なデータの転送
                   href: ../common/storage-solution-periodic-data-transfer.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: データをインポート/エクスポートする
-              href: ../common/storage-import-export-service.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-              items:
-                - name: 要件を確認する
-                  href: ../common/storage-import-export-requirements.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: データを BLOB にインポートする
-                  href: ../common/storage-import-export-data-to-blobs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                  displayName: 'Azure CLI, az import-export create, import-export'
-                - name: データをファイルにインポートする
-                  href: ../common/storage-import-export-data-to-files.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                  displayName: 'Azure CLI, az import-export create, import-export'
-                - name: BLOB からデータをエクスポートする
-                  href: ../common/storage-import-export-data-from-blobs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                  displayName: 'Azure CLI, az import-export create, import-export'
-                - name: 操作方法
-                  items:
-                    - name: カスタマー マネージド キーを使用する
-                      href: ../common/storage-import-export-encryption-key-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: ドライブの状態を表示する
-                      href: ../common/storage-import-export-view-drive-status.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: ジョブの状態を表示する
-                      href: ../common/storage-import-export-tool-reviewing-job-status-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: インポート ジョブを修復する
-                      href: ../common/storage-import-export-tool-repairing-an-import-job-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: エクスポート ジョブを修復する
-                      href: ../common/storage-import-export-tool-repairing-an-export-job-v1.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: よく寄せられる質問
-                  href: ../common/storage-import-export-service-faq.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: リファレンス
-                  items:
-                    - name: REST API
-                      href: /rest/api/storageimportexport/jobs
-                    - name: Azure PowerShell
-                      href: /powershell/module/Az.ImportExport
-                - name: サポートに問い合わせる
-                  href: ../common/storage-import-export-contact-microsoft-support.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: アーカイブ
-                  items:
-                    - name: インポート (v1) のドライブを準備する
-                    - name: インポート (v2) のドライブを準備する
         - name: 監視
           items:
             - name: Blob ストレージの監視
@@ -705,7 +665,7 @@
               href: data-lake-storage-introduction-abfs-uri.md
             - name: 階層型名前空間について
               href: data-lake-storage-namespace.md
-        - name: セキュリティ
+        - name: Security
           items:
             - name: セキュリティに関する推奨事項
               href: security-recommendations.md
