--- a/articles/azure-resource-manager/managed-applications/toc.yml
+++ b/articles/azure-resource-manager/managed-applications/toc.yml
@@ -31,7 +31,7 @@
       href: concepts-built-in-policy.md
     - name: ロール定義のアーティファクト
       href: concepts-custom-role-definition.md
-    - name: セキュリティ
+    - name: Security
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
@@ -180,6 +180,6 @@
     - name: Resource Manager テンプレートのベスト プラクティス
       href: 'https://github.com/Azure/azure-quickstart-templates/blob/master/1-CONTRIBUTION-GUIDE/best-practices.md'
     - name: Microsoft Q&A
-      href: 'https://docs.microsoft.com/en-us/answers/topics/azure-managed-applications.html'
+      href: /answers/topics/azure-managed-applications.html
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-managed-app'
