--- a/articles/cognitive-services/Computer-vision/index.yml
+++ b/articles/cognitive-services/Computer-vision/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: PatrickFarley
   ms.author: pafarley
   ms.date: 09/22/2020
-  ms.openlocfilehash: 8a1710a44ebd93db352dbc63bd350aad8bfa2785
-  ms.sourcegitcommit: 5b93010b69895f146b5afd637a42f17d780c165b
+  ms.openlocfilehash: cc986f0b29798cef62df2746a5af9a5d34bcef16
+  ms.sourcegitcommit: 78ecfbc831405e8d0f932c9aafcdf59589f81978
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/02/2020
-  ms.locfileid: "96533895"
+  ms.lasthandoff: 01/23/2021
+  ms.locfileid: "98737712"
 landingContent:
 - title: Computer Vision について
   linkLists:
@@ -105,7 +105,7 @@ landingContent:
   - linkListType: deploy
     links:
     - text: Container Instances の使用
-      url: deploy-computer-vision-on-container-instances.md
+      url: ../containers/azure-container-instance-recipe.md
     - text: Kubernetes と Helm での使用
       url: deploy-computer-vision-on-premises.md
 - title: 空間分析コンテナーの使用
