--- a/articles/iot-edge/index.yml
+++ b/articles/iot-edge/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: kgremban
   manager: philmea
   ms.date: 08/05/2019
-  ms.openlocfilehash: 63c36cf0f602c7c19e3ec1eb0b38b84a2e3a6e15
-  ms.sourcegitcommit: 2e72661f4853cd42bb4f0b2ded4271b22dc10a52
+  ms.openlocfilehash: d1b23b67413f7e270cb894fcf201204afa255b20
+  ms.sourcegitcommit: 484f510bbb093e9cfca694b56622b5860ca317f7
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/14/2020
-  ms.locfileid: "92048340"
+  ms.lasthandoff: 01/21/2021
+  ms.locfileid: "98633092"
 landingContent:
 - title: Linux デバイス向けの開発
   linkLists:
@@ -50,12 +50,14 @@ landingContent:
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: IoT Edge ランタイムをインストールする
-      url: how-to-install-iot-edge.md
-    - text: 1 つのデバイスの登録とプロビジョニング
-      url: how-to-manual-provision-symmetric-key.md
+    - text: 1 つのデバイスを登録する
+      url: how-to-register-device.md
     - text: 大規模なデバイスの登録とプロビジョニング
       url: how-to-auto-provision-symmetric-keys.md
+    - text: Linux デバイスに IoT Edge ランタイムをインストールする
+      url: how-to-install-iot-edge.md
+    - text: Windows デバイスに IoT Edge ランタイムをインストールする
+      url: how-to-install-iot-edge-on-windows.md
 - title: オープンソース コミュニティと交流する
   linkLists:
   - linkListType: get-started
