--- a/articles/azure-arc/servers/toc.yml
+++ b/articles/azure-arc/servers/toc.yml
@@ -55,7 +55,7 @@
               href: manage-vm-extensions-powershell.md
             - name: Resource Manager テンプレートを使用して拡張機能をデプロイする
               href: manage-vm-extensions-template.md
-        - name: サーバー上の使用済みマネージド ID
+        - name: サーバーでマネージド ID を使用する
           href: managed-identity-authentication.md
         - name: エージェントの管理
           href: manage-agent.md
@@ -82,7 +82,7 @@
     - name: .NET
       href: /dotnet/api/overview/azure/hybridcompute/management
     - name: Azure Stack HCI REST
-      href: 'https://docs.microsoft.com/rest/api/stackhci'
+      href: /rest/api/stackhci
     - name: REST
       href: /rest/api/hybridcompute
     - name: Go
