--- a/articles/cognitive-services/QnAMaker/index.yml
+++ b/articles/cognitive-services/QnAMaker/index.yml
@@ -11,12 +11,12 @@ metadata:
   services: cognitive-services
   title: QnA Maker のドキュメント
   description: QnA Maker は、データに基づく対話型の Q&A レイヤーを作成できるクラウドベースの API サービスです。 QnA Maker を使用すると、FAQ ドキュメント、URL、製品マニュアルなどの半構造化コンテンツからの質問と回答サービスをいっそう強力にできます。 QnA Maker サービスでは、ユーザーが自然言語を使って行った質問に対し、ナレッジにある Q&A から回答となる可能性が最も高いものが提示されます。
-  ms.openlocfilehash: d1236b8a40d43ac5203cd4cac8aa607c925a04d7
-  ms.sourcegitcommit: 1756a8a1485c290c46cc40bc869702b8c8454016
+  ms.openlocfilehash: 6bc5587612a953f2e0bb43765f579adb56fab336
+  ms.sourcegitcommit: 75041f1bce98b1d20cd93945a7b3bd875e6999d0
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/09/2020
-  ms.locfileid: "96932729"
+  ms.lasthandoff: 01/22/2021
+  ms.locfileid: "98703391"
 landingContent:
 - title: QnA Maker について
   linkLists:
@@ -60,9 +60,7 @@ landingContent:
     links:
     - text: クイック スタート:Postman または cURL の使用
       url: quickstarts/get-answer-from-knowledge-base-using-url-tool.md
-    - text: クイック スタート:REST と cURL の使用
-      url: quickstarts/quickstart-rest-curl.md
-    - text: クイック スタート:SDK の使用
+    - text: 'クイックスタート: SDK と REST API の使用'
       url: quickstarts/quickstart-sdk.md
   - linkListType: how-to-guide
     links:
