commit translated contents

--- a/articles/azure-arc/servers/toc.yml
+++ b/articles/azure-arc/servers/toc.yml
@@ -99,4 +99,4 @@
 - name: リソース
   items:
     - name: Azure Arc のジャンプスタート
-      href: 'https://github.com/microsoft/azure_arc'
+      href: 'https://azurearcjumpstart.io'
