--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: hub-page
   ms.date: 03/24/2020
   ms.author: trbye
-  ms.openlocfilehash: 62eb664d3987a4480be442817397d8969ec3a93e
-  ms.sourcegitcommit: 10d00006fec1f4b69289ce18fdd0452c3458eca5
+  ms.openlocfilehash: 05ceda4909a792b60733645b6816d384555c6925
+  ms.sourcegitcommit: a055089dd6195fde2555b27a84ae052b668a18c7
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/21/2020
-  ms.locfileid: "95018686"
+  ms.lasthandoff: 01/26/2021
+  ms.locfileid: "98791191"
 highlightedContent:
   items:
   - title: 音声サービスとは
@@ -148,7 +148,7 @@ conceptualContent:
       url: speech-container-howto-on-premises.md
     - itemType: how-to-guide
       text: Azure Container Instances 上の音声サービス コンテナー
-      url: deploy-speech-on-container-instances.md
+      url: ../containers/azure-container-instance-recipe.md
     footerLink:
       text: 詳細
       url: index-hosting.yml
