--- a/articles/cognitive-services/form-recognizer/index.yml
+++ b/articles/cognitive-services/form-recognizer/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: PatrickFarley
   ms.author: pafarley
   ms.date: 09/05/2019
-  ms.openlocfilehash: c456153b3efe3da28d9cd7b2fd39c1eca073e656
-  ms.sourcegitcommit: fc401c220eaa40f6b3c8344db84b801aa9ff7185
+  ms.openlocfilehash: 1d4eb69942ad9d58e4d0d358efc13c3dbcb77923
+  ms.sourcegitcommit: a055089dd6195fde2555b27a84ae052b668a18c7
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/20/2021
-  ms.locfileid: "98598143"
+  ms.lasthandoff: 01/26/2021
+  ms.locfileid: "98788368"
 landingContent:
 - title: Form Recognizer について
   linkLists:
@@ -133,7 +133,7 @@ landingContent:
   - linkListType: deploy
     links:
     - text: Container Instances の使用
-      url: deploy-form-recognizer-on-container-instances.md
+      url: ../containers/azure-container-instance-recipe.md
 - title: リファレンス
   linkLists:
   - linkListType: reference
