--- a/articles/storsimple/TOC.yml
+++ b/articles/storsimple/TOC.yml
@@ -38,8 +38,7 @@
         - name: Azure Portal で管理する
           href: storsimple-virtual-array-manager-service-administration.md
           items:
-            - name: 最新の更新プログラムをインストールする
-              href: storsimple-virtual-array-install-update-11.md
+            - name: の更新プログラムをインストールする
               items:
                 - name: Update 1 をインストールする
                   href: storsimple-virtual-array-install-update-1.md
@@ -87,10 +86,10 @@
           href: storsimple-ova-web-ui-admin.md
     - name: リリース ノート
       items:
-        - name: Update 1.2 - 最新
+        - name: Update 1.3 - 最新
+          href: storsimple-virtual-array-update-13-release-notes.md
+        - name: Update 1.2
           href: storsimple-virtual-array-update-12-release-notes.md
-        - name: Update 1.1
-          href: storsimple-virtual-array-update-11-release-notes.md
         - name: Update 1
           href: storsimple-virtual-array-update-1-release-notes.md
         - name: アーカイブ
