--- a/articles/cloud-services/index.yml
+++ b/articles/cloud-services/index.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Landing
-title: Azure Cloud Services のドキュメント
+title: Azure Cloud Services (クラシック) のドキュメント
 summary: Cloud Services を使用して、可用性と拡張性に優れたクラウド アプリケーションや API をホストして実行する方法について説明します。 仮想マシン ホストを管理して、ソフトウェアを構成、修正、インストールする方法について説明します。
 metadata:
-  title: Azure Cloud Services のドキュメント
+  title: Azure Cloud Services (クラシック) のドキュメント
   description: Cloud Services を使用して、可用性とスケーラビリティが高いクラウド アプリケーションや API をホストして実行する方法について説明します。
   ms.service: cloud-services
   service: cloud-services
@@ -10,22 +10,22 @@ metadata:
   author: tgore03
   ms.author: tagore
   ms.date: 03/06/2020
-  ms.openlocfilehash: 11699a28ab3b5863812c9c171428896aeaaefec1
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 596fbac75c93ec36906123ee6ff5c7f13e3706b9
+  ms.sourcegitcommit: 6272bc01d8bdb833d43c56375bab1841a9c380a5
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "78943176"
+  ms.lasthandoff: 01/23/2021
+  ms.locfileid: "98739719"
 landingContent:
-- title: Cloud Services について
+- title: Cloud Services (クラシック) について
   linkLists:
   - linkListType: overview
     links:
-    - text: Cloud Services とは
+    - text: Cloud Services (クラシック) とは
       url: cloud-services-choose-me.md
   - linkListType: video
     links:
-    - text: Cloud Services のビデオ ライブラリ
+    - text: Cloud Services (クラシック) のビデオ ライブラリ
       url: https://azure.microsoft.com/documentation/videos/index/?services=cloud-services
 - title: 作業開始
   linkLists:
@@ -49,9 +49,9 @@ landingContent:
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: ポータルでのクラウド サービスの作成とデプロイ
+    - text: ポータルでのクラウド サービス (クラシック) の作成とデプロイ
       url: cloud-services-how-to-create-deploy-portal.md
-    - text: PowerShell での空のクラウド サービス コンテナーの作成
+    - text: PowerShell での空のクラウド サービス (クラシック) コンテナーの作成
       url: cloud-services-powershell-create-cloud-container.md
 - title: 管理する
   linkLists:
@@ -59,5 +59,5 @@ landingContent:
     links:
     - text: 一般的な管理タスク
       url: cloud-services-how-to-manage-portal.md
-    - text: クラウド サービスの構成
+    - text: クラウド サービス (クラシック) を構成する
       url: cloud-services-how-to-configure-portal.md
