--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -1,5 +1,5 @@
 - name: Azure Stack Edge Pro のドキュメント
-  href: /azure/databox-online/
+  href: ./index.yml
   expanded: true
 - name: Azure Stack Edge Pro - GPU
   items:
@@ -291,8 +291,8 @@
               href: azure-stack-edge-contact-microsoft-support.md
     - name: 共有のリリース ノート
       items:
-        - name: 2012 - 最新
-          href: azure-stack-edge-gpu-2012-release-notes.md
+        - name: 2101 - 最新
+          href: azure-stack-edge-gpu-2101-release-notes.md
         - name: 2010
           href: azure-stack-edge-gpu-2009-release-notes.md
         - name: 2008
@@ -397,7 +397,7 @@
   items:
     - name: セキュリティ ベースライン
       href: security-baseline.md
-- name: リファレンス
+- name: References
   items:
     - name: Azure Policy の組み込み
       displayName: 'samples, policies, definitions'
